<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="8dp"
    android:padding="8dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/subjectNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="Data Structures"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/editImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/crossImageView"
        android:src="@drawable/ic_mode_edit_black_24dp"
        android:alpha="0.5"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/edit_button_description"/>

    <ImageView
        android:id="@+id/crossImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/ic_delete_black_24dp"
        android:alpha="0.5"
        android:contentDescription="@string/cross_image_content_description" />

    <TextView
        android:id="@+id/subjectCodeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/subjectNameTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/subject_code"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/subjectCodeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="101"
        app:layout_constraintTop_toBottomOf="@id/subjectNameTextView"
        app:layout_constraintLeft_toRightOf="@id/subjectCodeTitle"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"/>

    <TextView
        android:id="@+id/subjectCreditTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/subjectCodeTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/subject_credit"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/subjectCreditTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/subjectCodeTitle"
        app:layout_constraintLeft_toRightOf="@id/subjectCreditTitle"
        tools:text="3.00"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"/>

</android.support.constraint.ConstraintLayout>